--- a/EnterpriseDirect/EnterpriseDirect.csproj
+++ b/EnterpriseDirect/EnterpriseDirect.csproj
@@ -16,6 +16,7 @@
         <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.6"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.6"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.6"/>
+        <ProjectReference Include="..\EnterpriseDirect.Shared\EnterpriseDirect.Shared.csproj" />
     </ItemGroup>
 
 </Project>
